# ChangeLog for media-sound/gnump3d
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/gnump3d/ChangeLog,v 1.72 2012/05/15 19:47:12 halcy0n Exp $

  15 May 2012; Mark Loeser <halcy0n@gentoo.org> gnump3d-3.0-r1.ebuild:
  Stable for ppc64; bug #392857

  05 Feb 2012; Raúl Porcel <armin76@gentoo.org> gnump3d-3.0-r1.ebuild:
  alpha/sparc stable wrt #392857

  13 Dec 2011; Tim Harder <radhermit@gentoo.org> files/gnump3d.init.d:
  Replace deprecated opts variable from init script.

  13 Dec 2011; Agostino Sarubbo <ago@gentoo.org> gnump3d-3.0-r1.ebuild:
  Stable for AMD64, wrt bug #392857

  11 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> gnump3d-3.0-r1.ebuild:
  x86 stable wrt bug #392857

*gnump3d-3.0-r1 (23 Feb 2010)

  23 Feb 2010; Steve Dibb <beandog@gentoo.org> +gnump3d-3.0-r1.ebuild:
  Add runtime dep on sox

  23 Feb 2010; Steve Dibb <beandog@gentoo.org> gnump3d-3.0.ebuild:
  Update homepage

  19 Dec 2008; Peter Volkov <pva@gentoo.org> gnump3d-2.9_pre7.ebuild,
  gnump3d-2.9_pre99.ebuild, gnump3d-2.9.ebuild, gnump3d-3.0.ebuild:
  Removed || die after enewuser, bug #237296.

  03 Jun 2008; Steve Dibb <beandog@gentoo.org> files/gnump3d.init.d:
  Add index option to init script, bug 204418

  17 Jan 2008; Fabian Groffen <grobian@gentoo.org> gnump3d-2.9_pre7.ebuild,
  gnump3d-2.9_pre99.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  30 Nov 2007; Steve Dibb <beandog@gentoo.org> gnump3d-3.0.ebuild:
  amd64 stable, bug 193132

  28 Nov 2007; Raúl Porcel <armin76@gentoo.org> gnump3d-3.0.ebuild:
  alpha/sparc stable wrt security #193132

  25 Nov 2007; Christian Faulhammer <opfer@gentoo.org> gnump3d-3.0.ebuild:
  stable x86, security bug 193132

  25 Nov 2007; Markus Rothe <corsair@gentoo.org> gnump3d-3.0.ebuild:
  Stable on ppc64; bug #193132

*gnump3d-3.0 (24 Nov 2007)

  24 Nov 2007; Alexis Ballier <aballier@gentoo.org> +gnump3d-3.0.ebuild:
  version bump, bug #193132
