@@ -5,14 +5,14 @@ AUX gnump3d-3.0-prefix.patch 423 RMD160 6141cb2c76a6cb795a1d0b43d7162e6eca059738
 AUX gnump3d.conf.d 159 RMD160 8578277660b38c694741242c0976dcbec025c79e SHA1 46f252357dfc09a41040f03e2cfac6e5d3ba1078 SHA256 f78bbe10fd4b7e1fdb860a3fa99490cdb98e827ff35c1e8077da77f5bf0340f2
 AUX gnump3d.init.d 841 RMD160 7a0354427b324decdca682426fec572a71fc59b6 SHA1 b373a4d609fb1585c4880ab95d8eb7306fe1e1ac SHA256 b9a9f7975005884e98e092c2b61c2818cd0a1220305abc187cee1a5aedb2eda5
 DIST gnump3d-3.0.tar.bz2 633215 RMD160 c0c3cbe31a6961675636309e82f4ff116db323f1 SHA1 3ba3ec3001084ec59f3b75769ae84cef467654d7 SHA256 1ac5bd0e850b0e18ccd9d19219f5108fa84b50d8ae3825a361e8b907eab7f19c
-EBUILD gnump3d-3.0-r1.ebuild 2300 RMD160 84f47c41acbd64a3ba18b8fa00b92cbc4b0a5797 SHA1 daf61392e0936f20ad2ccd0cf278b1bdaa8356dc SHA256 54fd2cc66f030d268432362425bed010136c72611bea22ffd994538c8256d0d5
-EBUILD gnump3d-3.0.ebuild 1955 RMD160 a2f0954905dc8296165942654389107aa322c9cd SHA1 543f3f5fab82d1789a0796e0def617b1f3a99b46 SHA256 5b9423a7d5d737572967f9dd997c8b723a49f8259445ebf4d0826d2277a60467
-MISC ChangeLog 9713 RMD160 cb8ad4bd0558a5dd3a739fc15de4e9f3e012d6d7 SHA1 8a94f5fc7c6fe03401970d6fb1e36d5078a99741 SHA256 8905ebe9ef52b1805f213826d5b8222b8d3a54bdcc4e8095912aec329b3d2296
+EBUILD gnump3d-3.0-r1.ebuild 2305 RMD160 ff5f30cfe2cb798db29ed66d4858cf1eb10491aa SHA1 9f3181135a3ea4490a38eed84d47b60933b1a5ce SHA256 0e9cd4ea7055c0465582a490e5ffdba01ddcbab8b3944e4763af401ea2733470
+EBUILD gnump3d-3.0.ebuild 1961 RMD160 6faa28431633e73745acbcc667b7037255013d00 SHA1 1c93921f5fb9e99541dfe49b819cd5f232bfc7af SHA256 9705ea106f898fef16a1fbb482d070070186b185be935d98b97a801eab5cb940
+MISC ChangeLog 9834 RMD160 5f7dea47251a1ea6434798e3193221c2ba72cc3b SHA1 e7888491b592325820805a6a78c8e1698a6ecd44 SHA256 3a018e2a62e21934cc3d8dc2b940d5de7752c6f3eb75a067a3fcde0321d061e6
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk+/2m0ACgkQX3X2B8XHTon4hgCff/O5JFOCyG8NMgmUDhA1lju+
-lAkAnjDmSILzvJ9UUIVjR0i3fbbWhFoW
-=SMS2
+iEYEARECAAYFAk/Xn+sACgkQX3X2B8XHTomP8ACeI63IyA4YuDHviDBLdVfGgQg5
+V8MAn3it0aNEl+QX1/zzP8hQipAZkHnE
+=2X9J
 -----END PGP SIGNATURE-----
